slides-28/05: titre en français
Proposition: Clavardage en groupe chiffré bout-en-bout

--- a/lundi_28_05/slides.tex
+++ b/lundi_28_05/slides.tex
@@ -36,7 +36,7 @@
 \usetheme[sectionpage=progressbar, progressbar=frametitle, block=fill]{metropolis}
 
 %%%%%%% METADATA %%%%%%%
-\title{Secure Group Messaging}
+\title{Clavardage en groupe chiffré bout-en-bout}
 \author{Simon Fernandez}
 \date{\today}
 
