--- a/lundi_28_05/slides.tex
+++ b/lundi_28_05/slides.tex
@@ -3,7 +3,7 @@
 %%%%%% PACKAGES %%%%%%
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[english]{babel}
+\usepackage[french]{babel}
 
 \usepackage{hyperref}
 \usepackage[numbers]{natbib}
