slides-28/05: datetime, date fixe formatée (fr)

--- a/lundi_28_05/slides.tex
+++ b/lundi_28_05/slides.tex
@@ -5,6 +5,9 @@
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
 
+\usepackage{datetime}
+\selectlanguage{french}
+
 \usepackage{hyperref}
 \usepackage[numbers]{natbib}
 \usepackage{array}
@@ -38,7 +41,7 @@
 %%%%%%% METADATA %%%%%%%
 \title{Clavardage en groupe chiffré bout-en-bout}
 \author{Simon Fernandez}
-\date{\today}
+\date{\formatdate{28}{05}{2018}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
