slides-28/05: protocole centré math
Retrait de la technique reposant sur les listes à puce.

--- a/lundi_28_05/slides.tex
+++ b/lundi_28_05/slides.tex
@@ -98,11 +98,7 @@
 
 
 \section{mpOTR}
-<<<<<<< HEAD
 \begin{frame}{mpOTR – Ian Goldberg et al. 2009~\cite{mpotr}}
-=======
-\begin{frame}{mpOTR -- Ian Goldberg et al. 2009 \cite{mpotr}}
->>>>>>> slides-28/05: traduction intégrale en français
 	\begin{block}{Initialisation}
 		\begin{itemize}
 			\item Concensus sur une liste de participants;
@@ -221,22 +217,21 @@
 
 	\pause
 
-	\begin{block}{Exchange}
+	\begin{block}{Protocole}
 	$$
     \begin{array}{rl}
       A :       & x \la \Uu(\ZZ / q\ZZ) \\
       B :       & y \la \Uu(\ZZ / q\ZZ) \\
-      A \ra B : & g^x \\
-      B \ra A : & g^y \\
-      A :       & S = (g^y)^x \\
-      B :       & S = (g^x)^y \\
+      A \ra B : & g^x                   \\
+      B \ra A : & g^y                   \\
+      A :       & S = (g^y)^x           \\
+      B :       & S = (g^x)^y           
     \end{array}
    $$
 	\end{block}
 
 \end{frame}
 
-<<<<<<< HEAD
 \begin{frame}{Cliquet asymétrique DH}
   \only<1>{
     \begin{block}{Initialisation}
