Protocoles : mieux centré

--- a/lundi_28_05/slides.tex
+++ b/lundi_28_05/slides.tex
@@ -215,14 +215,16 @@
 	\pause
 
 	\begin{block}{Exchange}
-		\begin{itemize}
-			\item $A : x \la \Uu(\ZZ / q\ZZ)$
-			\item $B : y \la \Uu(\ZZ / q\ZZ)$
-			\item $A \ra B : g^x$
-			\item $B \ra A : g^y$
-			\item $A : S = (g^y)^x$
-			\item $B : S = (g^x)^y$
-		\end{itemize}
+	$$
+    \begin{array}{rl}
+      A :& x \la \Uu(\ZZ / q\ZZ) \\
+      B :& y \la \Uu(\ZZ / q\ZZ) \\
+      A \ra B :& g^x \\
+      B \ra A :& g^y \\
+      A :& S = (g^y)^x \\
+      B :& S = (g^x)^y \\
+    \end{array}
+   $$
 	\end{block}
 
 \end{frame}
@@ -233,16 +235,18 @@
 	\end{block}
 
 	\begin{block}{Communication}
-		\begin{itemize}
-			\item $A : x' \la \Uu(\ZZ / q \ZZ)$
-			\item $A \ra B : \set{M, g^{x'}}_{S_0}$
-			\item $A : S_1 = (g^y)^{x'}$
-			\item $B : S_1 = (g^{x'})^y$ 
-			\item $B : y' \la \Uu(\ZZ / q \ZZ)$
-			\item $B \ra A : \set{M', g^{y'}}_{S_1}$
-			\item $B : S_2 = (g^{x'})^{y'}$ 
-			\item $A : S_2 = (g^{y'})^{x'}$ 
-		\end{itemize}
+	$$
+      \begin{array}{rl}
+        A :& x' \la \Uu(\ZZ / q\ZZ) \\
+        A \ra B :& \set{M, g^{x'}}_{S_0} \\
+        A :& S_1 = (g^y)^{x'} \\
+        B :& S_1 = (g^{x'})^y \\
+        B :& y' \la \Uu(\ZZ / q \ZZ) \\
+        B \ra A :& \set{M', g^{y'}}_{S_1} \\
+        B :& S_2 = (g^{x'})^{y'} \\
+        A :& S_2 = (g^{y'})^{x'} \\
+      \end{array}
+      $$
 	\end{block}
 \end{frame}
 
