forme : espaces insécables avant \cite

--- a/lundi_28_05/slides.tex
+++ b/lundi_28_05/slides.tex
@@ -95,7 +95,7 @@
 
 
 \section{mpOTR}
-\begin{frame}{mpOTR – Ian Goldberg et al. 2009 \cite{mpotr}}
+\begin{frame}{mpOTR – Ian Goldberg et al. 2009~\cite{mpotr}}
 	\begin{block}{Initialisation}
 		\begin{itemize}
 			\item Agree on the list of participants
@@ -145,12 +145,12 @@
 
 
 \section{GOTR}
-\begin{frame}{GOTR – Liu et al.\cite{gotr}}
+\begin{frame}{GOTR – Liu et al~\cite{gotr}}
 	\center
 	\includegraphics[height=6cm]{img/group_ring4.png}
 \end{frame}
 
-\begin{frame}{GOTR – Liu et al.\cite{gotr}}
+\begin{frame}{GOTR – Liu et al~\cite{gotr}}
 	\center
 	\includegraphics[height=6cm]{img/group_ring5.png}
 \end{frame}
@@ -305,7 +305,7 @@
 
 \section{Asynchronous Ratcheting Tree : ART}
 
-\begin{frame}{Asynchronous Ratcheting Tree : ART — Cohn Gordon et al. \cite{art}}
+\begin{frame}{Asynchronous Ratcheting Tree : ART — Cohn Gordon et al.~\cite{art}}
 	\center
   \begin{tikzpicture}[]
 		\path (3, 3) node[rectangle, draw](root) {$ tk: ABCD $}
@@ -325,7 +325,7 @@
 	\end{tikzpicture}
 \end{frame}
 
-\begin{frame}{Asynchronous Ratcheting Tree : ART — Cohn Gordon et al. \cite{art}}
+\begin{frame}{Asynchronous Ratcheting Tree : ART — Cohn Gordon et al.~\cite{art}}
 	\center
   \begin{tikzpicture}[]
 		\path (3, 3) node[rectangle, draw](root) {$ tk = g^{x_{ab} x_{cd}} $}
